--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <div id="app">
         <div id="login-page">
-            <h2>MPASAT</h2>
             <h2>Login</h2>
             <input type="text" id="username" placeholder="Username" required>
             <input type="password" id="password" placeholder="Password" required>
@@ -18,7 +17,9 @@
                 <option value="admin">Admin</option>
             </select>
             <button id="login-btn">Login</button>
+            <p>Don't have an account?</p>
             <button id="create-account-link">Create Account</button>
+            <div id="error-message" style="color: red; display: none;"></div>
         </div>
 
         <div id="create-account-page" style="display: none;">
@@ -30,54 +31,88 @@
                 <option value="admin">Admin</option>
             </select>
             <button id="create-account-btn">Create Account</button>
+            <div id="create-error-message" style="color: red; display: none;"></div>
         </div>
 
         <div id="teacher-dashboard" style="display: none;">
             <h2>Teacher Dashboard</h2>
-            <button id="mark-attendance-btn">Mark Attendance</button>
+            <button id="mark-in-btn">Mark In</button>
+            <button id="mark-out-btn">Mark Out</button>
             <button id="logout-btn-teacher">Logout</button>
+            <div id="mark-in-form" style="display: none;">
+                <h3>Mark In</h3>
+                <input type="text" id="mark-in-name" placeholder="Name" disabled>
+                <input type="text" id="mark-in-date" placeholder="Date" disabled>
+                <input type="text" id="mark-in-time" placeholder="Entry Time" disabled>
+                <input type="text" id="mark-in-subject" placeholder="Subject" required>
+                <input type="text" id="mark-in-class" placeholder="Class (e.g., Form 1)" required>
+                <input type="number" id="mark-in-periods" placeholder="Number of Periods" required>
+                <input type="text" id="mark-in-phone" placeholder="Phone Number" required>
+                <button id="submit-mark-in-btn">Submit Mark In</button>
+            </div>
+            <div id="mark-out-form" style="display: none;">
+                <h3>Mark Out</h3>
+                <input type="text" id="mark-out-name" placeholder="Name" disabled>
+                <input type="text" id="mark-out-date" placeholder="Date" disabled>
+                <input type="text" id="mark-out-time" placeholder="Exit Time" disabled>
+                <input type="text" id="mark-out-subject" placeholder="Subject" required>
+                <input type="text" id="mark-out-class" placeholder="Class (e.g., Form 1)" required>
+                <input type="number" id="mark-out-periods" placeholder="Number of Periods" required>
+                <input type="text" id="mark-out-phone" placeholder="Phone Number" required>
+                <button id="submit-mark-out-btn">Submit Mark Out</button>
+            </div>
         </div>
 
         <div id="admin-dashboard" style="display: none;">
             <h2>Admin Dashboard</h2>
             <button id="logout-btn-admin">Logout</button>
-            <table id="attendance-table">
+            <h3>Mark In Submissions</h3>
+            <table id="mark-in-table">
                 <thead>
                     <tr>
-                        <th>Username</th>
+                        <th>Name</th>
                         <th>Date</th>
+                        <th>Entry Time</th>
                         <th>Subject</th>
                         <th>Class</th>
-                        <th>Entry Time</th>
+                        <th>Periods</th>
+                        <th>Phone Number</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <h3>Mark Out Submissions</h3>
+            <table id="mark-out-table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Date</th>
                         <th>Exit Time</th>
-                        <th>Periods</th> <!-- Added column for periods -->
+                        <th>Subject</th>
+                        <th>Class</th>
+                        <th>Periods</th>
+                        <th>Phone Number</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <h3>Summary Table</h3>
+            <table id="summary-table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Time Taught</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
             </table>
             <button id="print-btn">Print Attendance</button>
         </div>
-
-        <div id="attendance-form" style="display: none;">
-            <h2>Mark Attendance</h2>
-            <input type="text" id="attendance-name" placeholder="Name" disabled>
-            <input type="text" id="entry-time" placeholder="Entry Time" disabled>
-            <input type="text" id="date" placeholder="Date" disabled>
-            <input type="text" id="subject" placeholder="Subject" required>
-            <input type="text" id="class" placeholder="Class" required>
-            <input type="text" id="exit-time" placeholder="Exit Time" required>
-            <input type="number" id="periods" placeholder="Number of Periods" required>
-            <button id="submit-attendance-btn">Submit</button>
-        </div>
-
-        <div id="error-message" style="color: red; display: none;"></div>
     </div>
 
-    <!-- Load Firebase App and necessary services -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="app.js"></script> <!-- Keep this at the end -->
+    <script src="app.js"></script>
 </body>
 </html>
-
